# mine-palace

./: .dockerignore  Dockerfile  PLAN.md  README.md  index.html  pyproject.toml  styles.css
src/mine_palace/: __init__.py  cli.py  models.py  planner.py  rcon.py  render.py  sample.py  vault.py
tests/: test_smoke.py
