[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mine-palace"
version = "0.1.0"
description = "Turn an Obsidian vault into a walkable Minecraft memory palace."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Vipul" }
]

[project.scripts]
mine-palace = "mine_palace.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
